<?xml version="1.0" encoding="utf-8"?><!--课程订购页面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_course_subscribe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.tu4.activity.course.CourseSubscribeActivity">

    <com.example.tu4.view.TitleView
        android:id="@+id/course_order_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.example.tu4.view.TitleView>

    <!--&lt;!&ndash;设置状态栏颜色&ndash;&gt;-->
    <!--<TextView-->
    <!--android:id="@+id/top_tv"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/dp20"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:background="@color/color_97c8cd" />-->
    <!--&lt;!&ndash;设置标题&ndash;&gt;-->
    <!--<RelativeLayout-->
    <!--android:id="@+id/course_order_title"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/dp30"-->
    <!--android:layout_below="@id/top_tv"-->
    <!--android:background="@color/color_97c8cd">-->
    <!--&lt;!&ndash;返回按钮&ndash;&gt;-->
    <!--<ImageButton-->
    <!--android:id="@+id/btn_course_return"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_marginStart="@dimen/dp11"-->
    <!--android:background="@color/color_97c8cd"-->
    <!--android:contentDescription="@string/returnback"-->
    <!--android:onClick="course_order_return"-->
    <!--android:src="@mipmap/left_arrow_white" />-->
    <!--&lt;!&ndash;标题&ndash;&gt;-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:text="@string/course_order"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:textSize="18sp" />-->
    <!--</RelativeLayout>-->
    <!--账户-->
    <LinearLayout
        android:id="@+id/lin_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/course_order_title"
        android:layout_marginTop="@dimen/dp11"
        android:orientation="horizontal">
        <!--账户文字-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp11"
            android:text="@string/account"
            android:textColor="@color/color_999999" />
        <!--账户名称-->
        <TextView
            android:id="@+id/tv_account_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:text="@string/account_hint"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp14" />
    </LinearLayout>
    <!--全长分割线-->
    <TextView
        android:id="@+id/cut_off_rule_long"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/lin_account"
        android:background="@color/e0e0e0" />
    <!--课程信息-->
    <TextView
        android:id="@+id/tv_course_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cut_off_rule_long"
        android:layout_marginStart="@dimen/dp11"
        android:layout_marginTop="@dimen/dp11"
        android:text="@string/course_info"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/sp14" />
    <!--短长分割线-->
    <TextView
        android:id="@+id/cut_off_rule_short"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/tv_course_info"
        android:layout_marginLeft="@dimen/dp11"
        android:layout_marginRight="@dimen/dp11"
        android:layout_marginTop="@dimen/dp11"
        android:background="@color/e0e0e0" />
    <!--课程信息列表-->
    <RelativeLayout
        android:id="@+id/re_course_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp116"
        android:layout_below="@id/cut_off_rule_short"
        android:background="@color/sffffff"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_course_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp86"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/tv_subject_image"
                android:layout_width="@dimen/dp86"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tv_suject_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp5"
                android:layout_toRightOf="@id/tv_subject_image"
                android:gravity="center"
                android:text="课程XXXXXXXX"
                android:textColor="@color/g333"
                android:textSize="@dimen/px30" />

            <TextView
                android:id="@+id/tv_suject_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_suject_name"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp1"
                android:layout_toRightOf="@+id/tv_subject_image"
                android:gravity="center"
                android:text="@string/subject_listviewItem_text2"
                android:textColor="@color/s999999"
                android:textSize="@dimen/px26" />

            <TextView
                android:id="@+id/tv_suject_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_suject_level"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp1"
                android:layout_toRightOf="@+id/tv_subject_image"
                android:gravity="center"
                android:text="@string/subject_listViewItem_text3"
                android:textColor="@color/s999999"
                android:textSize="@dimen/px26" />

            <TextView
                android:id="@+id/tv_suject_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_subject_image"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/tv_suject_teacher"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_toRightOf="@+id/tv_subject_image"
                android:gravity="bottom"
                android:text="@string/xx_xx_xx"
                android:textColor="@color/s999999"
                android:textSize="@dimen/px26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_80"
                android:text="@string/money"
                android:textColor="@color/color_f49c41" />

            <TextView
                android:id="@+id/tv_course_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp11"
                android:text="@string/money_5000_00"
                android:textColor="@color/color_f49c41"
                android:textSize="@dimen/sp19" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_long_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/re_course_info"
        android:background="@color/e0e0e0" />
    <!--收件人信息-->
    <LinearLayout
        android:id="@+id/lin_receiver_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_long_line"
        android:layout_marginTop="@dimen/dp11"
        android:orientation="horizontal">
        <!--必须输入的标识符-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp11"
            android:text="@string/must_input_sign"
            android:textColor="@color/ff0000" />
        <!--真实姓名-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_name"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp14" />
        <!--姓名输入框-->
        <EditText
            android:id="@+id/et_account_name"
            android:layout_width="230dp"
            android:layout_height="@dimen/dp37"
            android:layout_marginStart="@dimen/dp11"
            android:background="@drawable/true_name_shape"
            android:hint="@string/pleaseInputName"
            android:paddingLeft="@dimen/dp5"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_receiver_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_receiver_info"
        android:layout_marginTop="@dimen/dp11"
        android:orientation="horizontal">
        <!--必须输入的标识符-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp11"
            android:text="@string/must_input_sign"
            android:textColor="@color/ff0000" />
        <!--手机号码-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recever_phone_number"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp14" />
        <!--手机号码输入框-->
        <EditText
            android:id="@+id/et_account_tel"
            android:layout_width="@dimen/dp230"
            android:layout_height="@dimen/dp37"
            android:layout_marginStart="@dimen/dp11"
            android:background="@drawable/true_name_shape"
            android:hint="@string/pleaseInputPhonenamber"
            android:paddingLeft="@dimen/dp5"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/sp14" />
    </LinearLayout>
    <!--底部框架-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <!--分割线-->
        <TextView
            android:id="@+id/tv_bottom_line_long"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:background="@color/color_d1d1d1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50">
            <!--金钱-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp11"
                android:text="@string/course_order_money"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp14" />
            <!--人民币符号-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp50"
                android:text="@string/money"
                android:textColor="@color/color_f49c41" />
            <!--总金额-->
            <TextView
                android:id="@+id/tv_total_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:text="@string/money_5000_00"
                android:textColor="@color/color_f49c41"
                android:textSize="@dimen/sp19" />
            <!--确认订购按钮-->
            <Button
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp37"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp11"
                android:background="@drawable/ensure_pay_button_shape"
                android:onClick="ensure_order"
                android:text="@string/ensure_pay"
                android:textSize="@dimen/sp17" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
