<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_complaint_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/stroke_line"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_weight="0.3333"
            android:button="@null"
            android:text="@string/complaint"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_13"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/color_d1d1d1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_weight="0.3333"
            android:button="@null"
            android:text="@string/operate_suggest"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_13"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/color_d1d1d1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_weight="0.3333"
            android:button="@null"
            android:text="@string/other"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/sp_13"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_d1d1d1"/>
    </RadioGroup>

</RelativeLayout>
